--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,54 +1,120 @@
- .img-cat {
-     width: 100%;
-     height: 20vh;
- }
- 
- .cat-link {
-     text-decoration: none;
-     color: brown;
-     font-size: 4vh;
-     font-weight: bold;
- }
- 
- .car {
-     width: 100%;
-     height: 70vh;
- }
- 
- .car-title a {
-     color: white;
-     font-weight: bold;
-     text-decoration: none;
- }
- 
- .car-titles {
-     background: black;
-     opacity: 0.7;
- }
- 
- .secure {
-     width: 100%;
-     height: 30vh;
- }
- 
- .title-one {
-     background: skyblue;
-     color: black;
-     text-align: center;
- }
- 
- .logo {
-     height: 3vh;
-     width: 3vw;
- }
- 
- .rss {
-     width: 5vw;
-     height: 7vh;
- }
- 
- marquee {
-     background: skyblue;
-     font-size: 2vw;
-     font-weight: bold;
- }
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+body {
+    font-family: 'Baloo 2', cursive;
+}
+
+.img-cat {
+    width: 100%;
+    height: 20vh;
+}
+
+.cat-link {
+    text-decoration: none;
+    color: brown;
+    font-size: 4vh;
+    font-weight: bold;
+}
+
+.car {
+    width: 100%;
+    height: 70vh;
+}
+
+.car-title a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.car-titles {
+    background: black;
+    opacity: 0.7;
+}
+
+.secure {
+    width: 100%;
+    height: 30vh;
+}
+
+.title-one {
+    font-family: 'Audiowide', cursive;
+    background: skyblue;
+    color: black;
+    text-align: center;
+}
+
+.logo {
+    height: 3vh;
+    width: 3vw;
+}
+
+.rss {
+    font-size: 2vh;
+    font-weight: bold;
+}
+
+.marquee {
+    background: rgb(236, 227, 236);
+    font-size: 1.5vw;
+    font-weight: bold;
+}
+
+.logos {
+    width: 5vw;
+    height: 8vh;
+}
+
+.imageEdit {
+    width: 20vw;
+    height: 10vh;
+}
+
+.footer {
+    text-align: center;
+    font-weight: bold;
+}
+
+.footer a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
+.social i {
+    text-align: center;
+    font-size: 5vh;
+}
+
+.card {
+    font-weight: bold;
+}
+
+.card a {
+    text-decoration: none;
+    color: gray;
+}
+
+.card a:hover {
+    text-decoration: none;
+    color: blue;
+}
+
+.carousel-indicators li {
+    height: 4vh;
+    color: black;
+}
+
+.showImage {
+    width: 100%;
+    height: 60vh;
+}
+
+.auteur {
+    color: gray;
+    font-weight: bold;
+}
+
+.editImage {
+    width: 100%;
+    height: 60vh;
+}
